--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/hari-kiran-7b7a6315a/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/harikiranraju">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://harikirank.github.io/cv/">Website</a>
       <p class="copyright">© 2019 Hari Kiran. All rights reserved.</p>
     </div>
 
