--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.svg" alt="cloud-img">
       <h1>I'm Hari  .</h1>
-      <p class="para">a <span class="web">web</span> developer .</p>
+      <p class="para">a <span /*class="web"*/>web</span> developer .</p>
       <img class="bottom-cloud" src="images/cloud.svg" alt="cloud-img">
       <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
